    RoleController
    SurveyMaintenanceController
    TrackRoundsController
Some snippets have moved location in the code:
    AddTracksSnippet       => Tracker\\AddTracksSnippet
    EditRoundStepSnippet   => Tracker\\Rounds\\EditRoundStepSnippet
    ShowRoundStepSnippet   => Tracker\\Rounds\\ShowRoundStepSnippet
    EditTrackEngineSnippet => Tracker\\EditTrackEngineSnippet
    EditTrackTokenSnippet  => Token\\EditTrackTokenSnippet
    ShowTrackTokenSnippet  => Token\\ShowTrackTokenSnippet
    SurveyQuestionsSnippet => Survey\\SurveyQuestionsSnippet
    TrackSurveyOverviewSnippet   => Tracker\\TrackSurveyOverviewSnippet
    TrackTokenOverviewSnippet    => Tracker\\TrackTokenOverviewSnippet
    TrackUsageTextDetailsSnippet => Tracker\\TrackUsageTextDetailsSnippet
The following interfaces are no longer used:
    FixedTracksInterface
    TracksOnlyInterface
    StandAloneSurveysInterface

Important changes from 1.6.4 => 1.7.0
============================================================
Appointments can be used to create tracks
Appointments can be linked automatically to track fields
New track field overview
New track fields changed events
Layouts can use bootstrap for styling
Page loading speed increased by moving javascript loading
Improved security means users may get error warnings when opening the same form in two windows.
Password fields for login to sources, mail servers and security devices are now encrypted reversible instead of as plain text
X-frame setting in project.ini allows defense against clickjacking
Works with Zend Framework 1.12.8 and higher
Project and application programmers can use PHP namespaces instead of Zend FW 1 class names
Fixed many minor bugs

Important changes from 1.6.3 => 1.6.4
============================================================
Errors in token events are less likely to cause the application to halt