@@ -1,0 +1,136 @@
+<?php
+
+/**
+ * Copyright (c) 2015, Erasmus MC
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions are met:
+ *    * Redistributions of source code must retain the above copyright
+ *      notice, this list of conditions and the following disclaimer.
+ *    * Redistributions in binary form must reproduce the above copyright
+ *      notice, this list of conditions and the following disclaimer in the
+ *      documentation and/or other materials provided with the distribution.
+ *    * Neither the name of Erasmus MC nor the
+ *      names of its contributors may be used to endorse or promote products
+ *      derived from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED. IN NO EVENT SHALL MAGNAFACTA BE LIABLE FOR ANY
+ * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+ * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+ * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ *
+ *
+ * @package    Gems
+ * @subpackage Snippets\Tracker
+ * @author     Matijs de Jong <mjong@magnafacta.nl>
+ * @copyright  Copyright (c) 2015 Erasmus MC
+ * @license    New BSD License
+ * @version    $Id: AvailableTracksSnippet.php 2430 2015-02-18 15:26:24Z matijsdejong $
+ */
+
+namespace Gems\Snippets\Tracker;
+
+/**
+ *
+ *
+ * @package    Gems
+ * @subpackage Snippets\Tracker
+ * @copyright  Copyright (c) 2015 Erasmus MC
+ * @license    New BSD License
+ * @since      Class available since version 1.7.1 1-mei-2015 16:05:45
+ */
+class AvailableTracksSnippet extends \Gems_Snippets_ModelTableSnippetAbstract
+{
+    /**
+     * Set a fixed model sort.
+     *
+     * Leading _ means not overwritten by sources.
+     *
+     * @var array
+     */
+    protected $_fixedSort = array('gtr_track_name' => SORT_ASC, 'gtr_date_start' => SORT_ASC);
+
+    /**
+     * Sets pagination on or off.
+     *
+     * @var boolean
+     */
+    public $browse = false;
+
+    /**
+     *
+     * @var \Gems_Loader
+     */
+    protected $loader;
+
+    /**
+     * The respondent
+     *
+     * @var \Gems_Tracker_Respondent
+     */
+    protected $respondent;
+
+    /**
+     *
+     * @var \Gems_Util
+     */
+    protected $util;
+
+    /**
+     * Called after the check that all required registry values
+     * have been set correctly has run.
+     *
+     * @return void
+     */
+    public function afterRegistry()
+    {
+        parent::afterRegistry();
+
+        $orgId = $this->respondent->getOrganizationId();
+
+        // These values are set for the generic table snippet and
+        // should be reset for this snippet
+        $this->browse          = false;
+        $this->extraFilter     = array(
+            'gtr_active' => 1,
+            'gtr_date_start <= CURRENT_DATE',
+            '(gtr_date_until IS NULL OR gtr_date_until >= CURRENT_DATE)',
+            "gtr_organizations LIKE '%|$orgId|%'",
+            );
+        $this->menuEditActions = 'create';
+        $this->menuShowActions = 'view';
+    }
+
+    /**
+     * Creates the model
+     *
+     * @return \MUtil_Model_ModelAbstract
+     */
+    protected function createModel()
+    {
+        $translated = $this->util->getTranslated();
+
+        $model = new \MUtil_Model_TableModel('gems__tracks');
+
+        $model->set('gtr_track_name',    'label', $this->_('Track'));
+        $model->set('gtr_survey_rounds', 'label', $this->_('Survey #'));
+        $model->set('gtr_date_start',    'label', $this->_('From'),
+                'dateFormat', $translated->formatDate,
+                'tdClass', 'date'
+                );
+        $model->set('gtr_date_until',    'label', $this->_('Until'),
+                'dateFormat', $translated->formatDateForever,
+                'tdClass', 'date'
+                );
+
+        return $model;
+    }
+
+}
