@@ -27,6 +27,7 @@ Some snippets have moved location in the code:
     EditRoundStepSnippet   => Tracker\\Rounds\\EditRoundStepSnippet
     ShowRoundStepSnippet   => Tracker\\Rounds\\ShowRoundStepSnippet
     EditTrackEngineSnippet => Tracker\\EditTrackEngineSnippet
+    EditTrackSnippet       => Tracker\\EditTrackSnippet
     EditTrackTokenSnippet  => Token\\EditTrackTokenSnippet
     ShowTrackTokenSnippet  => Token\\ShowTrackTokenSnippet
     SurveyQuestionsSnippet => Survey\\SurveyQuestionsSnippet
